package de.lucasstrubel.faktura.gemeinsam;

/**
 * Fachliche Datenbereiche der Anwendung, über die der {@link EreignisBus}
 * Änderungen meldet.
 */
public enum DatenBereich {
    KUNDEN,
    PRODUKTE,
    DOKUMENTE
}
