@startuml klassendiagramm_produktverwaltung
' UML-Klassendiagramm Produktverwaltung (Pflichtenheft Teil B, Abschnitt 7.1)
' Layout-Engine Smetana -> kein Graphviz erforderlich.
!pragma layout smetana

skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam linetype ortho
hide empty members

title UML-Klassendiagramm — Produktverwaltung (Komponente B), Stand 3.0

' ===================== Domänenmodell =====================

class Produkt {
  - produktnummer : String
  - bezeichnung : String
  - beschreibung : String
  - einzelpreisNetto : BigDecimal
  - steuersatz : BigDecimal
  - einheit : String
}

' ===================== Service-Schicht =====================

interface ProduktService <<interface>> {
  + findeProdukt(produktnummer : String) : Produkt
  + suche(suchbegriff : String) : List<Produkt>
}

class ProduktVerwaltungsService {
  + legeAn(produkt : Produkt) : Produkt
  + aendere(produkt : Produkt) : Produkt
  + loescheProdukt(produktnummer : String)
  + alleSortiertNachBezeichnung() : List<Produkt>
  + suche(suchbegriff : String) : List<Produkt>
  + findeProdukt(produktnummer : String) : Produkt
}

interface ProduktnummernGenerator <<interface>> {
  + naechsteNummer() : String
}

class JdbcProduktnummernGenerator {
  + naechsteNummer() : String
}

interface ProduktRepository <<interface>> {
  + speichere(produkt : Produkt) : Produkt
  + loesche(produktnummer : String)
  + findeNachNummer(produktnummer : String) : Produkt
  + alleSortiertNachBezeichnung() : List<Produkt>
  + suche(suchbegriff : String) : List<Produkt>
}

class JdbcProduktRepository <<SQLite>> {
}

class ProduktCsvExport {
  + exportiere(produkte : List<Produkt>, zielDatei : Path)
}

class DatenGeaendertEreignis <<record>> {
  + bereich : DatenBereich
}

class EreignisBus {
  + abonniere(bereich : DatenBereich, beobachter : Runnable)
  + empfange(ereignis) <<AFTER_COMMIT>>
}

class JdbcNummernkreis <<gemeinsam>> {
  + naechsterWert(bereich, jahr, startwert) : int
}

enum DatenBereich {
  KUNDEN
  PRODUKTE
  DOKUMENTE
}

' ===================== Externe Komponente (lose Kopplung) =====================

interface ProduktReferenzPruefung <<extern (Komponente A)>> {
  + istProduktReferenziert(produktnummer : String) : boolean
}

' ===================== Realisierungen (konkrete Implementierungen) =====================

ProduktService <|.. ProduktVerwaltungsService
ProduktRepository <|.. JdbcProduktRepository
ProduktnummernGenerator <|.. JdbcProduktnummernGenerator
JdbcProduktnummernGenerator ..> JdbcNummernkreis : gleiche Transaktion

' ===================== Nutzungs-/Abhängigkeitsbeziehungen =====================

ProduktVerwaltungsService ..> ProduktRepository
ProduktVerwaltungsService ..> ProduktnummernGenerator
ProduktVerwaltungsService ..> ProduktReferenzPruefung
ProduktVerwaltungsService ..> DatenGeaendertEreignis : veröffentlicht
DatenGeaendertEreignis ..> EreignisBus : zugestellt nach Commit
DatenGeaendertEreignis ..> DatenBereich

' Zugriff auf Produkt = Abhängigkeit (liefert/speichert), KEIN 1:n-Container
ProduktVerwaltungsService ..> Produkt : verwaltet
ProduktRepository ..> Produkt : liefert / speichert
ProduktCsvExport ..> Produkt : exportiert

@enduml
